# lab-llm-engineering

./: README.md  main.py  pyproject.toml
week1/: day1.ipynb  day2.ipynb  exercise1.ipynb  exercise2.ipynb
